--- a/app/stylesheets/sass/settings/_layout.sass
+++ b/app/stylesheets/sass/settings/_layout.sass
@@ -61,3 +61,18 @@ body
   height: $header-navbar-height
   @extend %block-padding
 
+.page-section
+  margin:
+    top: $grid-gutter-width
+    bottom: $grid-gutter-width
+
+.page-section-top
+  margin:
+    bottom: $grid-gutter-width
+
+.page-section-sm
+  margin:
+    top: $grid-gutter-width/2
+    bottom: $grid-gutter-width/2
+
+
