--- a/app/stylesheets/sass/modules/_products-simple-form.sass
+++ b/app/stylesheets/sass/modules/_products-simple-form.sass
@@ -7,7 +7,8 @@
     &.text
       display: block
       margin-right: 0
-    .form-control
+    .form-control,
+    select.form-control
       @extend .plain-input__input
       padding-left: 0
       text-align: left
