--- a/app/stylesheets/sass/bundle.sass
+++ b/app/stylesheets/sass/bundle.sass
@@ -27,6 +27,7 @@
 @import settings/forms
 
 @import modules/buttons
+@import modules/toggle
 @import modules/modal
 @import modules/alerts
 @import modules/login
