--- a/app/products_new.haml
+++ b/app/products_new.haml
@@ -36,10 +36,17 @@
               .row
                 .col-md-8
                   .form-group
-                    .toggle__block
-                      %input.toggle__block-checkbox{type: 'checkbox'}
-                      .toggle__block-switch
-                      .toggle__block-track
+                    %label.toggle__block{role: 'product-toggle'}
+                      .toggle__block-label-checked.pull-left
+                        Товар на сайте
+                      .toggle__block-box.pull-left
+                        %input.toggle__block-checkbox{type: 'checkbox'}
+                        .toggle__block-switch
+                        .toggle__block-track
+
+                      .toggle__block-label-unchecked.pull-left
+                        Скрыть товар
+                      .clearfix
                 .col-md-8
                   .form-group
                     %input.form-control{type: "text", placeholder: 'Название товара'}
