[#79679882] add alert to toggle

--- a/app/products_new.haml
+++ b/app/products_new.haml
@@ -47,6 +47,8 @@
                       .toggle__block-label-unchecked.pull-left
                         Скрыть товар
                       .clearfix
+                  .alert.alert-danger
+                    Невозможно опубликовать товар. Проверьте поля, выделенные красным
                 .col-md-8
                   .form-group
                     %input.form-control{type: "text", placeholder: 'Название товара'}
