--- a/app/stylesheets/sass/modules/_toggle.sass
+++ b/app/stylesheets/sass/modules/_toggle.sass
@@ -51,7 +51,7 @@ input[type="checkbox"]
   top: ($toggle-height - $toggle-switch-radius*2) / 2
   left: $toggle-width - $toggle-switch-radius*2 + 2px
   bottom: 2px
-  background-color: $red
+  background-color: $yellow
   width: $toggle-switch-radius*2
   height: $toggle-switch-radius*2
   border-radius: $toggle-switch-radius*2
@@ -87,8 +87,8 @@ input[type="checkbox"]
 
 
 .toggle__block-label-unchecked
-  background-color: $red
-  color: #fff
+  background-color: $yellow
+  color: $text-color
 
 .toggle__block.checked
   .toggle__block-label-checked
