--- a/app/stylesheets/sass/modules/_login.sass
+++ b/app/stylesheets/sass/modules/_login.sass
@@ -87,7 +87,8 @@ $login-logo-height: 37px
   top: 0
   left: auto
   right: 0
-  padding: $block-padding
+  padding: $plain-input-height/4
+  font-size: $plain-input-height/3
   +antialiased
 
 
