--- a/app/stylesheets/sass/modules/_toggle.sass
+++ b/app/stylesheets/sass/modules/_toggle.sass
@@ -74,9 +74,9 @@ input[type="checkbox"]
 .toggle__block-label-checked,
 .toggle__block-label-unchecked
   display: inline-block
-  font-size: $font-size-smaller
+  font-size: $font-size-small
   padding: 1px 5px
-  margin: 5px ($toggle-height - 4px)/2
+  margin: 4px ($toggle-height - 4px)/2
   border-radius: 4px
   color: $gray-light
   @extend %toggle-transition
