--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -8,7 +8,9 @@ $gray-lightest:          lighten(#000, 90%)
 $blue: #009BFF
 $blue-dark: darken($blue, 20%)
 $red: #f6584f
-$green: #57CB6A
+$red-dark: #CB1F35
+$green: #7ED321
+$green-dark: #57CB6A
 $orange: #ffae00
 $yellow: #FFD400
 $purple: rgb(158, 0, 93)
@@ -28,12 +30,12 @@ $link-color-hover: $blue
 $link-hover-color: $link-color-hover
 $link-color-hover-light: lighten($link-color-hover, 30%)
 
-$border-radius-base: 4px
-$input-border-radius: 4px
+$border-radius-base: 2px
+$input-border-radius: 2px
 $border-radius-large: $border-radius-base
 $border-radius-large: $border-radius-base
 
-$body-background: #fff
+$body-background: #F4F4F4
 $footer-background: $gray-darker
 $article-background: darken(#fff, 7%)
 $muted-block-background: lighten($line-color, 5%)
@@ -68,7 +70,7 @@ $navbar-default-link-hover-bg:             transparent
 $navbar-default-link-active-color:         $brand-color
 $navbar-default-link-active-bg:            transparent
 
-$header-navbar-background: #f1f1f1
+$header-navbar-background: #fff
 $header-navbar-height: 78px
 
 $hr-border: $gray-lighter
