--- a/app/stylesheets/sass/modules/_alerts.sass
+++ b/app/stylesheets/sass/modules/_alerts.sass
@@ -5,6 +5,10 @@
     text-shadow: none
     margin-top: -2px
 
+.form-alert
+  @extend .alert
+  display: inline-block
+
 .alert-success 
   +alert-variant($green, $green, #fff)
 
@@ -17,3 +21,8 @@
 .alert-danger 
   +alert-variant($red, $red, #fff)
 
+.form-alert-danger
+  +alert-variant($red-dark, $red-dark, #fff)
+  padding: 6px 15px
+  border-radius: $border-radius-base
+  font-size: $font-size-small
