--- a/app/stylesheets/sass/modules/_navbar.sass
+++ b/app/stylesheets/sass/modules/_navbar.sass
@@ -8,9 +8,9 @@
   border-bottom: 1px solid $gray-lighter
 
 .header-navbar__title
-  font-size: $font-size-h1*0.85
-  text-transform: uppercase
-  letter-spacing: 1px
+  font:
+    size: $font-size-h1
+    weight: bold
   padding-top: 3px
 
 .header-navbar__title,
