--- a/app/stylesheets/sass/settings/_forms.sass
+++ b/app/stylesheets/sass/settings/_forms.sass
@@ -231,3 +231,5 @@ input[type="search"]
   border: 1px solid $line-color
   background-color: #fff
   border-radius: $border-radius-base
+  margin:
+    bottom: $grid-gutter-width
