--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -5,7 +5,8 @@ $gray-light:             lighten(#000, 60%)
 $gray-lighter:           lighten(#000, 85%)
 $gray-lightest:          lighten(#000, 90%)
 
-$blue: #009BFF
+//$blue: #009BFF
+$blue: #0BAFFC
 $blue-dark: darken($blue, 20%)
 $red: #f6584f
 $red-dark: #CB1F35
