[#79955898] operator categories styles

--- a/app/stylesheets/sass/bundle.sass
+++ b/app/stylesheets/sass/bundle.sass
@@ -37,5 +37,6 @@
 @import modules/orders
 @import modules/products
 @import modules/products-simple-form
+@import modules/categories
 @import modules/typeahead
 @import modules/pagination
