--- a/app/stylesheets/sass/modules/_products-simple-form.sass
+++ b/app/stylesheets/sass/modules/_products-simple-form.sass
@@ -26,9 +26,12 @@
       display: block
       width: 100%
       height: auto
+      line-height: 1.44em
       margin:
         bottom: $grid-gutter-width/2
-      padding-left: $grid-gutter-width/2
+      padding:
+        left: $plain-input-padding/2
+        right: $plain-input-padding/2
       &, &:hover
         border: 1px solid $line-color
       &:focus
