--- a/app/stylesheets/sass/settings/_forms.sass
+++ b/app/stylesheets/sass/settings/_forms.sass
@@ -47,6 +47,9 @@ $plain-input-text-color: #000
   @extend %plain-input-style
   border: 1px solid $line-color
   border-radius: $border-radius-base
+  padding:
+    left: $plain-input-padding/2
+    right: $plain-input-padding/2
   &:hover, &:focus
     border: 1px solid $brand-color
 
