--- a/app/stylesheets/sass/modules/_buttons.sass
+++ b/app/stylesheets/sass/modules/_buttons.sass
@@ -114,15 +114,15 @@
 .btn-default
   display: inline-block
   &, &:hover, &:focus, &.active
-    +box-shadow(none)
     background-color: #fff
-    border-color: $line-color
+    border: none
     outline: none
+    +box-shadow(inset 0 0 0 1px $line-color)
   &:hover
-    border-color: $blue
+    +box-shadow(inset 0 0 0 1px $blue)
   &.active
     border-color: $blue
-    +box-shadow(0 0 0 -3px $blue)
+    +box-shadow(inset 0 0 0 3px $blue)
 
 .btn-default-light
   @extend .btn-default
