Sass::SyntaxError: Mixin "placeholder" does not accept a content block.

--- a/app/stylesheets/sass/modules/_products.sass
+++ b/app/stylesheets/sass/modules/_products.sass
@@ -216,8 +216,7 @@ $products-form-images-list-padding: 12px
   text-align: left
   color: $gray-light
   line-height: 0.85em
-  +placeholder
-    color: $gray-light
+  +placeholder( $gray-light )
   &:focus
     border-color: $blue
     +box-shadow(inset 0 0 0 2px $blue)
